--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <a href="" class="title">About</a>
         <a href="" class="titles">ANGKASA</a>
         <p class="text">Kelas A, atau yang sering disebut ANGKASA, adalah sebuah kelompok yang kokoh dan penuh ambisi dalam meraih kesuksesan dan keberhasilan. Dalam kelompok ini, terdapat anggota yang berasal dari berbagai ras, agama, dan memiliki kemampuan serta keahlian yang beragam. Meskipun begitu, kita semua bersatu dalam semangat yang sama, yaitu saling mendukung dan memotivasi satu sama lain untuk mencapai tujuan bersama. Keberagaman ini menjadi kekuatan bagi kita, karena kita dapat belajar dan bertumbuh melalui pengalaman dan pengetahuan yang berbeda-beda. Bersama-sama, kita mewujudkan visi dan impian kita, mengatasi tantangan dengan kerjasama, dan membuktikan bahwa keberhasilan tidak mengenal batasan ras, agama, atau kemampuan.</p>
-        <a href="main.html" class="home">Home</a>
+        <a href="index.html" class="home">Home</a>
         <a href="member.html" class="member">Member</a>
         <a href="member.html" class="next">Next</a>
     </div>
