--- a/member.html
+++ b/member.html
@@ -648,7 +648,7 @@
             </div>
 
             <div class="nav">
-                <a href="main.html" class="home">Home</a>
+                <a href="index.html" class="home">Home</a>
                 <a href="about.html" class="about">About</a>
                 <a href="member.html" class="next">Next</a>
             </div>
